# CMake_learning

./: .gitignore  LICENSE  README.md  cmake_schedule.xmind
cmake_tutorial/chapter_001/: CMakeLists.txt
cmake_tutorial/chapter_001_0/: main.c
cmake_tutorial/chapter_001_1/: CMakeLists.txt  main.c
cmake_tutorial/chapter_001_2/: CMakeLists.txt  main.c
cmake_tutorial/chapter_002_0/: CMakeLists.txt  main.c
cmake_tutorial/chapter_002_0/MathFunctions/: CMakeLists.txt  mysqrt.c  mysqrt.h
cmake_tutorial/chapter_002_1/: CMakeLists.txt  main.c
cmake_tutorial/chapter_002_1/alg_tea/: CMakeLists.txt  tea.c  tea.h
gitbook/: SUMMARY.md
gitbook/Chapter-001/: 基础起点.md  指定 C++ 标准.md  构建和测试.md  添加版本号和配置头文件.md
gitbook/Chapter-002/: 添加一个库.md
gitbook/Chapter-003/: 添加库的使用要求.md
gitbook/Chapter-004/: 安装和测试.md  安装规则.md  测试支持.md
gitbook/Chapter-005/: 指定编译定义.md  添加系统缺省.md
gitbook/Chapter-006/: 添加一个自定义命令和产生的文件.md
gitbook/Chapter-007/: 构建和安装.md
gitbook/Chapter-008/: 添加对仪表盘的支持.md
gitbook/Chapter-009/: 混合静态和共享.md
gitbook/Chapter-010/: 添加生成器表达式.md
gitbook/Chapter-011/: 添加导出配置.md
gitbook/Chapter-012/: 打包调试和发布.md
